--- a/cloud9/Dockerfile.cordova-android
+++ b/cloud9/Dockerfile.cordova-android
@@ -5,7 +5,7 @@
 FROM sapk/cordova-android
 MAINTAINER Antoine GIRARD <antoine.girard@sapk.fr>
 
-RUN buildDeps='make build-essential g++ gcc python2.7' && softDeps="git" \
+RUN buildDeps='make build-essential g++ gcc python2.7' && softDeps="tmux git" \
  && apt-get update && apt-get upgrade -y \
  && apt-get install -y $buildDeps $softDeps --no-install-recommends \
  && npm install -g forever && npm cache clean \
