--- a/cloud9/Dockerfile.golang
+++ b/cloud9/Dockerfile.golang
@@ -22,4 +22,5 @@ ENV PATH $GOPATH/bin:/usr/local/go/bin:$PATH
 RUN curl -fsSL "$GOLANG_DOWNLOAD_URL" -o golang.tar.gz \
 	&& echo "$GOLANG_DOWNLOAD_SHA256  golang.tar.gz" | sha256sum -c - \
 	&& tar -C /usr/local -xzf golang.tar.gz \
+	&& echo 'export PATH=$GOPATH/bin:/usr/local/go/bin:$PATH' >> /root/.bashrc \
 	&& rm golang.tar.gz 
