--- a/cachet-monitor/Dockerfile
+++ b/cachet-monitor/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine
 MAINTAINER Antoine GIRARD <antoine.girard@sapk.fr>
 
-apk -U --no-cache --no-progress upgrade \
+RUN apk -U --no-cache --no-progress upgrade \
 && apk -U --no-cache --force --no-progress add wget openssl ca-certificates \
 && wget -O /usr/bin/cachet-monitor https://github.com/CastawayLabs/cachet-monitor/releases/download/v2.0/cachet-monitor_linux_amd64 \
 && chmod +x /usr/bin/cachet-monitor \
