--- a/cachet-monitor/Dockerfile
+++ b/cachet-monitor/Dockerfile
@@ -5,6 +5,6 @@ RUN apk -U --no-cache --no-progress upgrade \
 && apk -U --no-cache --force --no-progress add wget openssl ca-certificates \
 && wget -O /usr/bin/cachet-monitor https://github.com/CastawayLabs/cachet-monitor/releases/download/v2.0/cachet-monitor_linux_amd64 \
 && chmod +x /usr/bin/cachet-monitor \
-&& apk del wget openssl && rm -rf /var/cache/apk/*
+&& rm -rf /var/cache/apk/*
 
 ENTRYPOINT /usr/bin/cachet-monitor
