--- a/glusterfs/Dockerfile
+++ b/glusterfs/Dockerfile
@@ -2,7 +2,7 @@ FROM finalduty/archlinux:daily
 LABEL maintainer Antoine GIRARD <antoine.girard@sapk.fr>
 
 RUN pacman -Syu --noconfirm glusterfs \
- && pacman -Scc --noconfirm \
+ && yes | pacman -Scc \
  && rm -r /usr/share/man/* \
  && rm -r /usr/share/locale/* 
 
