--- a/glusterfs/Dockerfile
+++ b/glusterfs/Dockerfile
@@ -1,9 +1,9 @@
 FROM finalduty/archlinux:daily
 LABEL maintainer Antoine GIRARD <antoine.girard@sapk.fr>
 
-RUN pacman -Syu --noconfirm glusterfs \
+RUN pacman -Sy --noconfirm glusterfs \
  && yes | pacman -Scc \
  && rm -r /usr/share/man/* \
  && rm -r /usr/share/locale/* 
 
-CMD /usr/bin/glusterd
+CMD /usr/sbin/glusterd
