--- a/fame/Dockerfile
+++ b/fame/Dockerfile
@@ -1,8 +1,8 @@
 FROM alpine
 MAINTAINER Antoine GIRARD <antoine.girard@sapk.fr>
 
-RUN apk add --no-cache --no-progress  ca-certificates python py-pip git gcc \
- && pip install virtualenv uwsgi \
+RUN apk add --no-cache --no-progress  ca-certificates python py-pip uwsgi git gcc \
+ && pip install virtualenv \
  && git clone https://github.com/certsocietegenerale/fame && cd fame \
  && echo "1" | utils/run.sh utils/install.py \
  && apk del --purge git gcc
