--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,9 @@ before_script:
   - go get -u -v github.com/estesp/manifest-tool
   
 script:
-  - echo "ok"
   - bash gitea/build.sh
 
 after_success:
-  - $GOPATH/bin/manifest-tool --username $DOCKER_USERNAME --password $DOCKER_PASSWORD push from-spec alpine-multi/alpine-multi.yml
-  - $GOPATH/bin/manifest-tool --username $DOCKER_USERNAME --password $DOCKER_PASSWORD push from-spec alpine-multi/alpine-multi-edge.yml
-  - $GOPATH/bin/manifest-tool --username $DOCKER_USERNAME --password $DOCKER_PASSWORD push from-spec alpine-multi/alpine-multi-3-5.yml
+  - $GOPATH/bin/manifest-tool --docker-cfg $HOME/.docker/ push from-spec alpine-multi/alpine-multi.yml
+  - $GOPATH/bin/manifest-tool --docker-cfg $HOME/.docker/ push from-spec alpine-multi/alpine-multi-edge.yml
+  - $GOPATH/bin/manifest-tool --docker-cfg $HOME/.docker/ push from-spec alpine-multi/alpine-multi-3-5.yml
