--- a/cloud9/Dockerfile.alpine
+++ b/cloud9/Dockerfile.alpine
@@ -6,11 +6,8 @@ FROM node:alpine
 MAINTAINER Antoine GIRARD <antoine.girard@sapk.fr>
 
  
-RUN echo "http://dl-4.alpinelinux.org/alpine/edge/main" >> /etc/apk/repositories \
- && echo "http://dl-4.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories \
- && echo "http://dl-4.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories \
- && apk -U --no-cache --no-progress upgrade \
- && apk -U --no-cache --force --no-progress add busybox bash tmux git make gcc g++ python sqlite wget openssl ca-certificates \
+RUN apk -U --no-cache --no-progress upgrade \
+ && apk -U --no-cache --force --no-progress add bash tmux git make gcc g++ python sqlite wget openssl ca-certificates \
  && npm install -g forever && npm cache clean \
  && git clone https://github.com/c9/core.git /root/.c9 && cd /root/.c9 \
  && mkdir -p /root/.c9/node/bin /root/.c9/bin /root/.c9/node_modules \
