--- a/cloud9/Dockerfile.alpine
+++ b/cloud9/Dockerfile.alpine
@@ -9,19 +9,14 @@ MAINTAINER Antoine GIRARD <antoine.girard@sapk.fr>
 RUN apk -U --no-cache --no-progress upgrade \
  && apk -U --no-cache --force --no-progress add bash tmux git make gcc g++ python sqlite wget openssl ca-certificates \
  && npm install -g forever && npm cache clean --force \
- && git clone https://github.com/c9/core.git /root/.c9 && cd /root/.c9 \
- && mkdir -p /root/.c9/node/bin /root/.c9/bin /root/.c9/node_modules \
- && ln -sf "`which tmux`" /root/.c9/bin/tmux \
- && ln -s "`which node`" /root/.c9/node/bin/node \
- && ln -s "`which npm`" /root/.c9/node/bin/npm \
- && npm i pty.js sqlite3 https://github.com/c9/nak/tarball/c9 \
- && npm i && echo 1 > /root/.c9/installed \
+ && git clone --depth=5 https://github.com/c9/core.git /cloud9 && cd /cloud9 \
  && ./scripts/install-sdk.sh \
  && npm cache clean --force && rm -rf /var/cache/apk/* /tmp/* /var/tmp/* \
+ && git reset --hard
 
  
 VOLUME /workspace
 EXPOSE 8181 
 ENTRYPOINT ["forever", "/root/.c9/server.js", "-w", "/workspace", "--listen", "0.0.0.0"]
 
-#CMD["--auth","username:password"]
+CMD ["--auth","c9:c9"]
