--- a/cloud9/Dockerfile.alpine
+++ b/cloud9/Dockerfile.alpine
@@ -9,11 +9,11 @@ MAINTAINER Antoine GIRARD <antoine.girard@sapk.fr>
 RUN apk -U --no-cache --no-progress upgrade \
  && apk -U --no-cache --force --no-progress add bash tmux git make gcc g++ python sqlite wget openssl ca-certificates \
  && npm install -g forever && npm cache clean --force \
- && git clone --depth=5 https://github.com/c9/core.git /cloud9 && cd /cloud9 \
- && mkdir -p /cloud9/node/bin /cloud9/bin /cloud9/node_modules \		
- && ln -sf "`which tmux`" /cloud9/bin/tmux \		
- && ln -s "`which node`" /cloud9/node/bin/node \		
- && ln -s "`which npm`" /cloud9/node/bin/npm \
+ && git clone --depth=5 https://github.com/c9/core.git /root/.c9 && cd /root/.c9 \
+ && mkdir -p /root/.c9/node/bin /root/.c9/bin /root/.c9/node_modules \		
+ && ln -sf "`which tmux`" /root/.c9/bin/tmux \		
+ && ln -s "`which node`" /root/.c9/node/bin/node \		
+ && ln -s "`which npm`" /root/.c9/node/bin/npm \
  && ./scripts/install-sdk.sh \
  && npm cache clean --force && rm -rf /var/cache/apk/* /tmp/* /var/tmp/* \
  && git reset --hard
