--- a/cloud9/Dockerfile.cordova-android
+++ b/cloud9/Dockerfile.cordova-android
@@ -3,18 +3,19 @@
 #                   https://hub.docker.com/r/kdelfour/cloud9-docker/~/dockerfile/
 
 FROM sapk/cordova-android
-MAINTAINER Antoine GIRARD <antoine.girard@sapk.fr>
+LABEL maintainer="Antoine GIRARD <antoine.girard@sapk.fr>"
 
 RUN buildDeps='make build-essential g++ gcc python2.7' && softDeps="tmux git" \
  && apt-get update && apt-get upgrade -y \
  && apt-get install -y $buildDeps $softDeps --no-install-recommends \
- && npm install -g forever && npm cache clean \
- && git clone https://github.com/c9/core.git /cloud9 && cd /cloud9 \
+ && npm install -g forever && npm cache clean --force \
+ && git clone --depth=5 https://github.com/c9/core.git /cloud9 && cd /cloud9 \
  && scripts/install-sdk.sh \
  && apt-get purge -y --auto-remove $buildDeps \
  && apt-get autoremove -y && apt-get autoclean -y && apt-get clean -y \
  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
- && npm cache clean
+ && npm cache clean --force \
+ && git reset --hard
  
 VOLUME /workspace
 EXPOSE 8181 
