gitea: fix multi sources

--- a/gitea/gitea-multi.yml
+++ b/gitea/gitea-multi.yml
@@ -1,14 +1,14 @@
 image: sapk/gitea:latest
 manifests:
-  - image: sapk/gitea:amd64
+  - image: sapk/gitea:latest-linux-amd64
     platform:
       architecture: amd64
       os: linux
-  - image: sapk/gitea:arm
+  - image: sapk/gitea:latest-linux-arm
     platform:
       architecture: arm
       os: linux
-  - image: sapk/gitea:arm64
+  - image: sapk/gitea:latest-linux-arm64
     platform:
       architecture: arm64
       os: linux
