--- a/cloud9/Dockerfile
+++ b/cloud9/Dockerfile
@@ -9,12 +9,22 @@
 FROM node:slim
 LABEL maintainer="Antoine GIRARD <antoine.girard@sapk.fr>"
 
+ENV DEBIAN_FRONTEND noninteractive
+
+RUN apt-get update && apt-get install -y locales \
+ && echo "en_US.UTF-8 UTF-8" > /etc/locale.gen \
+ && locale-gen en_US.UTF-8 \
+ && dpkg-reconfigure locales \
+ && /usr/sbin/update-locale LANG=en_US.UTF-8
+
 ENV LANG=en_US.UTF-8
+ENV LC_ALL=en_US.UTF-8
+ENV LC_CTYPE=en_US.UTF-8
+ENV LANGUAGE=en_US.UTF-8
 
 RUN buildDeps='make build-essential g++ gcc python2.7 locales' && softDeps="tmux git" \
  && apt-get update && apt-get upgrade -y \
  && apt-get install -y $buildDeps $softDeps --no-install-recommends \
- && locale-gen en_US.UTF-8 \
  && npm install -g forever && npm cache clean --force \
  && git clone --depth=5 https://github.com/c9/core.git /cloud9 && cd /cloud9 \
  && scripts/install-sdk.sh \
