--- a/cloud9/Dockerfile.alpine
+++ b/cloud9/Dockerfile.alpine
@@ -3,8 +3,7 @@
 #                   https://hub.docker.com/r/kdelfour/cloud9-docker/~/dockerfile/
 
 FROM node:alpine
-MAINTAINER Antoine GIRARD <antoine.girard@sapk.fr>
-
+LABEL maintainer="Antoine GIRARD <antoine.girard@sapk.fr>"
  
 RUN apk -U --no-cache --no-progress upgrade \
  && apk -U --no-cache --force --no-progress add bash tmux git make gcc g++ python sqlite wget openssl ca-certificates \
