--- a/cloud9/Dockerfile.cordova-android
+++ b/cloud9/Dockerfile.cordova-android
@@ -5,6 +5,19 @@
 FROM sapk/cordova-android
 LABEL maintainer="Antoine GIRARD <antoine.girard@sapk.fr>"
 
+ENV DEBIAN_FRONTEND noninteractive
+
+RUN apt-get update && apt-get install -y locales \
+ && echo "en_US.UTF-8 UTF-8" > /etc/locale.gen \
+ && locale-gen en_US.UTF-8 \
+ && dpkg-reconfigure locales \
+ && /usr/sbin/update-locale LANG=en_US.UTF-8
+
+ENV LANG=en_US.UTF-8
+ENV LC_ALL=en_US.UTF-8
+ENV LC_CTYPE=en_US.UTF-8
+ENV LANGUAGE=en_US.UTF-8
+
 RUN buildDeps='make build-essential g++ gcc python2.7' && softDeps="tmux git" \
  && apt-get update && apt-get upgrade -y \
  && apt-get install -y $buildDeps $softDeps --no-install-recommends \
