--- a/cloud9/Dockerfile.golang.alpine
+++ b/cloud9/Dockerfile.golang.alpine
@@ -2,7 +2,7 @@
 # A lot inspired by https://hub.docker.com/_/golang/ (near similar instruction but based on cloud9, GOPATH /workspace)
 
 FROM sapk/cloud9:alpine
-MAINTAINER Antoine GIRARD <antoine.girard@sapk.fr>
+LABEL maintainer="Antoine GIRARD <antoine.girard@sapk.fr>"
 
 RUN apk -U --no-cache --force --no-progress add go
 
