--- a/code-server/Dockerfile.alpine
+++ b/code-server/Dockerfile.alpine
@@ -1,10 +1,10 @@
 #Similar to https://github.com/cdr/code-server/blob/master/Dockerfile
-FROM node:10.15.1 AS build
+FROM node:10.15.1-alpine AS build
 
-# Install VS Code's deps. These are the only two it seems we need.
-RUN apt-get update && apt-get install -y \
+RUN apk -U --no-cache --no-progress add \
+	git make gcc g++ \
 	libxkbfile-dev \
-	libsecret-1-dev
+	libsecret-dev
 
 # Ensure latest yarn.
 RUN npm install -g yarn@1.13
@@ -17,37 +17,26 @@ WORKDIR /src
 # directly which should be fast as it is slow because it populates its own cache every time.
 RUN yarn && NODE_ENV=production yarn task build:server:binary
 
-# We deploy with ubuntu so that devs have a familiar environment.
-FROM ubuntu:18.04
+#TODO FROM alpine
+FROM node:10.15.1-alpine
 
-RUN apt-get update && apt-get install -y \
-	openssl \
-	net-tools \
-	git \
-	locales \
-	sudo \
-	dumb-init \
-	vim \
-	curl \
-	wget
-
-RUN locale-gen en_US.UTF-8
-# We unfortunately cannot use update-locale because docker will not use the env variables
-# configured in /etc/default/locale so we need to set it manually.
-ENV LC_ALL=en_US.UTF-8
+RUN apk -U --no-cache --no-progress upgrade \
+ && apk -U --no-cache --force --no-progress add sudo bash git wget curl openssl ca-certificates dumb-init libsecret libxkbfile
 
 RUN adduser --gecos '' --disabled-password coder \
  && echo "coder ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers.d/nopasswd \
  &&	mkdir -p /workspace && chown coder:coder /workspace
 
 USER coder
+
 WORKDIR /workspace
 
 # This assures we have a volume mounted even if the user forgot to do bind mount.
 # So that they do not lose their data if they delete the container.
 VOLUME [ "/workspace" ]
 
-COPY --from=build /src/packages/server/cli-linux-x64 /usr/local/bin/code-server
+COPY --from=build /src/packages/server/cli-musl-x64 /usr/local/bin/code-server
 EXPOSE 8443
 
-ENTRYPOINT ["dumb-init", "/usr/local/bin/code-server"]
+ENTRYPOINT ["dumb-init", "/usr/local/bin/code-server", "--disable-telemetry"]
+# --disable-telemetry seems needed to not stop the process 10 sec after start-up ... ?
