--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_script:
 script:
   - (cd gitea && ./build.sh)
   - (cd archlinux && ./build.sh)
+  - (cd gitea && rm -Rf gitea && ./buildx.sh)
 
 after_success:
   - $GOPATH/bin/manifest-tool --docker-cfg $HOME/.docker/ push from-spec gitea/gitea-multi.yml
