--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ sudo: true
 services:
   - docker
 install: true
+env:
+- DOCKER_CLI_EXPERIMENTAL=enabled
 
 before_install:
   - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
@@ -10,6 +12,8 @@ before_install:
   - sudo apt-get update
   - sudo apt-get -y install docker-ce
   - docker run --rm --privileged multiarch/qemu-user-static:register --reset
+  - mkdir -p ~/.docker/cli-plugins && wget -O ~/.docker/cli-plugins/docker-buildx https://github.com/docker/buildx/releases/download/v0.3.1/buildx-v0.3.1.linux-amd64 && chmod +x ~/.docker/cli-plugins/docker-buildx
+  - docker version
   
 before_script:
   - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"; fi
